# Exercises_MPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Parallel/: main
app/: CMakeLists.txt
app/compute_pi/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  funcs.cpp  funcs.h
